--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "prebuild": "eslint . --ext .ts",
     "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "format": "eslint . --ext .ts --fix"
+    "format": "eslint . --ext .ts --fix",
+    "dev-driver": "ts-node --prefer-ts-exts src/dev-driver.ts"
   },
   "main": "dist/index.js",
   "files": [
@@ -34,6 +35,7 @@
     "@grpc/grpc-js": "1.9.0",
     "goodmetrics-generated": "0.0.3",
     "google-protobuf": "3.21.2",
+    "js-csp": "^1.0.1",
     "otlp-generated": "0.0.7"
   },
   "engines": {
