--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/google-protobuf": "3.15.6",
     "@types/jest": "27.0.1",
     "@types/node": "^20.6.0",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "4.31.0",
     "@typescript-eslint/parser": "4.31.0",
     "eslint": "7.32.0",
@@ -37,7 +38,8 @@
     "goodmetrics-generated": "0.0.3",
     "google-protobuf": "3.21.2",
     "js-csp": "^1.0.1",
-    "otlp-generated": "0.0.7"
+    "otlp-generated": "0.0.7",
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
