--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "format": "eslint . --ext .ts --fix",
     "dev-driver": "ts-node --prefer-ts-exts test/dev-driver.ts"
   },
+  "license": "MIT"
   "main": "dist/src/index.js",
   "files": [
     "dist/src",
