--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@grpc/grpc-js": "1.10.0",
+    "@grpc/grpc-js": "1.10.8",
     "goodmetrics-generated": "0.1.0",
     "google-protobuf": "3.21.2",
     "js-csp": "^1.0.1",
     "otlp-generated": "0.1.0",
     "uuid": "^9.0.1"
+  },
+  "overrides": {
+    "@grpc/grpc-js": "1.10.8"
   },
   "engines": {
     "node": ">=16.0.0"
