--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@grpc/grpc-js": "1.10.0",
-    "goodmetrics-generated": "0.1.0",
+    "@grpc/grpc-js": "^1.10.5",
+    "goodmetrics-generated": "0.1.1",
     "google-protobuf": "3.21.2",
     "js-csp": "^1.0.1",
-    "otlp-generated": "0.1.0",
+    "otlp-generated": "0.1.1",
     "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "overrides": {
+    "core-js": "3.37.1"
   },
   "name": "goodmetrics-nodejs",
   "version": "0.5.0"
